# coastpy

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  citation.cff  environment.yaml  environment.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-book.yaml  docs.draft  lint.yaml  release-package.yaml  release.yaml  tests.yaml
analytics/: benchmark_data_fetching.ipynb  hypsometry.ipynb  shorelines.ipynb
book/: _config.yml  _toc.yml  intro.md
book/_build/.doctrees/: intro.doctree
book/_build/.doctrees/about/: acknowledgements.doctree
book/about/: acknowledgements.md
book/notebooks/: global_coastal_transect_system.ipynb
ci/envs/: 312-coastal-blue.yaml  312-coastal-full.yaml  312-release-package.yml  312-release.yaml  312-tests.yaml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/source/: conf.py  index.rst
docs/source/api/: coastpy.geo.rst  coastpy.io.rst  coastpy.libs.rst  coastpy.rst  coastpy.stac.rst  coastpy.stats.rst  coastpy.utils.rst  index.rst  modules.rst
docs/source/tutorials/: index.rst
docs/source/usage/: index.rst  installation.md  launch.md
notebooks/: template.ipynb
scripts/bash/: blue-create-env.sh  blue-make-coastal-grid.sh  convert-pqs-to-gpqs.sh
scripts/python/: add_gcts_to_stac.py  make_coastal_grid.py  make_coastal_zone.py  make_gcts.py  make_specification.py  stac_coastal_grid.py  stac_coastal_zone.py  stac_coclico_coaster.py  stac_coclico_erosion_db.py  stac_deltadtm.py  stac_gcts.py  stac_s2-l2a_composite.py  stac_sentinel_composite.py  stac_typology.py
scripts/python/cli/: list_packages.py  transform_to_geoparquet.py
specification/: README.md
specification/schema/: schema.json
src/coastpy/: __init__.py  coastpy.py  metrics.py
src/coastpy/eo/: band_statistics.py  collection.py  collection2.py  filter.py  indices.py  mask.py  scalers.py  transforms.py  typology.py  utils.py  viz.py
src/coastpy/geo/: __init__.py  geoms.py  ops.py  projections.py  projections2.py  quadtiles.py  quadtiles_utils.py  size.py  transect.py  transform.py  utils.py
src/coastpy/geometries/: boxes.py  slippy_map_tiles.py
src/coastpy/io/: __init__.py  cloud.py  data.py  engine.py  partitioner.py  utils.py
src/coastpy/libs/: dea_spatialtools.py  dea_tools.py  stac_table.py
src/coastpy/schema/: __init__.py  main.py  schema_hooks.py  type_enums.py  type_mappings.py  types.py  utils.py
src/coastpy/stac/: __init__.py  item.py  layouts.py  utils.py
src/coastpy/stats/: __init__.py  metrics.py
src/coastpy/typology/: encoding.py  utils.py  visualization.py
src/coastpy/utils/: __init__.py  config.py  dask.py  dask_utils.py  grid.py  log.py  pandas.py  pandas_utils.py  pd_utils.py  shorelines.py  size.py  xarray.py  xarray_utils.py  xr_utils.py
src/coastpy/viz/: dashboard.py
tests/: test_boxes.py  test_coastpy.py  test_eo_masks.py  test_path_parser.py
tutorials/: Extract_data_to_CSV.ipynb  Untitled.ipynb  Untitled1.ipynb  coastal_data_specification.ipynb  coastal_grid.ipynb  coastal_typology.ipynb  coastal_zone.ipynb  deltadtm.ipynb  global_coastal_transect_repository.ipynb  global_coastal_transect_system.ipynb  s2_l2a.ipynb  s2_l2a_composite.ipynb  s2a_l2a_composite.ipynb  shorelinemonitor_change_rate.ipynb  shorelinemonitor_export.ipynb  shorelinemonitor_series.ipynb  shorelinemonitor_shorelines.ipynb
