[tool.poetry]
name = "coastpy"
version = "0.1.1"
description = "Python tools for cloud-native coastal analytics."
authors = ["Floris Calkoen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
affine = "^2.4.0"
dask = "^2024.5.2"
dask-geopandas = "^0.3.1"
duckdb = "^1.0.0"
fsspec = "^2024.6.0"
geopandas = "^0.14.4"
geopy = "^2.4.1"
matplotlib = "^3.8.4"
mercantile = "^1.2.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
pyproj = "^3.6.1"
pystac = "^1.10.1"
python-dotenv = "^1.0.1"
rasterio = "^1.3.10"
rioxarray = "^0.15.6"
shapely = "^2.0.4"
stac-geoparquet = "^0.5.1"
xarray = "^2024.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
flake8 = "^4.0.1"
ruff = "^0.0.79"
pre-commit = "^2.15.0"
cattrs = "^1.10.0"
setuptools = "^70.1.0"


[tool.black]
line-length = 88

[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "TID251",      # flake8-tidy-imports.banned-api
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
]
extend-ignore = [
  "PLR",    # Design related pylint codes
  "E501",   # Line too long
  "PT004",  # Incorrect check, usefixtures is the correct way to do this
  "RUF012", # Would require a lot of ClassVar's
]
src = ["src"]
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
exclude = []
target-version = "py312"
flake8-unused-arguments.ignore-variadic-names = true

[tool.ruff.pydocstyle]
convention = "google"